[project]
name = "sam-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.18",
    "huggingface-hub>=0.34.0,<1.0",
    "sam-audio-infer>=0.1.1",
    "uvicorn>=0.34",
    "google-genai>=1.65.0",
    "python-dotenv>=1.2.1",
]
